# etter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  repl.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-demo.yml
demo/: docker-compose.yml  main.py
demo/etter-mcp-app/: README.md  docker-compose.yml  package-lock.json  package.json  server.ts
demo/geollm-mcp-app/: Dockerfile  mcp_server.py  package-lock.json
demo/initdb/: 01_extensions.sql
demo/static/: index.html
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: datasources.md  error-handling.md  getting-started.md  spatial-relations.md
docs/pdoc-templates/: module.html.jinja2
etter/: __init__.py  examples.py  exceptions.py  geometry_format.py  models.py  parser.py  prompts.py  spatial.py  spatial_config.py  validators.py
etter/datasources/: __init__.py  composite.py  ign_bdcarto.py  location_types.py  postgis.py  protocol.py  swissboundaries3d.py  swissnames3d.py
geollm/: parser.py
geollm-mcp-app/: Dockerfile  docker-compose.yml  mcp_server.py
scripts/: load_data_postgis.py
tests/: conftest.py  smoke_check.py  test_composite_datasource.py  test_context_aware_distances.py  test_contextual_distances.py  test_parser_aparse.py  test_postgis_datasource.py  test_spatial.py  test_spatial_config.py  test_swissboundaries3d.py  test_validators.py
tests/fixtures/: swissboundaries3d_sample.json
