[project]
name = "geollm"
version = "0.1.0"
description = "Natural language geographic query parsing using LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "GeoLLM Contributors"}
]
license = {text = "BSD-3-Clause"}
dependencies = [
    "langchain>=1.2.10",
    "pydantic>=2.12.5",
    "shapely>=2.1.2",
    "pyproj>=3.7.1",
    "geopandas>=1.1.2",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "langchain-openai>=1.1.10",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "E", "W", "UP", "C4", "ARG"]
ignore = ["E501"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["geollm*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "fastapi>=0.131.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
